[add]: fix horizontal-scrollbar

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,3 +1,10 @@
+@media screen and (max-width: 1160px) {
+  .container {
+    max-width: 1140px;
+    width: 100%;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .container {
     width: 100%;
